--- a/style.css
+++ b/style.css
@@ -1,33 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
 
-body{
+body {
     background-color: #F0F0F0;
 }
 
-header{
+header {
     background-color: #FFF;
     box-shadow: 0px 2px rgba(0, 0, 0, 0.16)
 }
 
-.container{
+.container {
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
 }
 
-.header{
+.header {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.button{
+.button {
     font-size: 18px;
     cursor: pointer;
     border: none;
@@ -36,29 +37,52 @@ header{
     transition: all 150ms ease-in-out;
 }
 
-.button:hover{
+.button:hover {
     filter: brightness(90%);
 }
 
-.grey-btn{
+.grey-btn {
     background-color: #F0F0F0;
 }
 
-.green-btn{
+.green-btn {
     background-color: #9FFF9C;
 }
 
-main{
+.red-btn {
+    background-color: #FF9C9C;
+}
+
+main {
     margin-top: 20px;
     text-align: center;
 }
 
-main .button{
+main .button {
     font-size: 24px;
     font-weight: 500;
 }
 
-.footer{
+.books {
+    margin-top: 16px;
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    grid-auto-flow: row;
+    gap: 20px;
+}
+
+.book {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    max-width: 360px;
+    font-size: 20px;
+    background-color: #FFF;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.footer {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -69,7 +93,7 @@ main .button{
     font-weight: 400;
 }
 
-.modal{
+.modal {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -83,36 +107,36 @@ main .button{
     padding: 20px;
 }
 
-.modal.active{
+.modal.active {
     transform: translate(-50%, -50%) scale(1);
 }
 
-.modal form{
+.modal form {
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
-form h2{
+form h2 {
     font-size: 22px;
 }
 
-form input{
+form input {
     border: none;
     border-radius: 5px;
     padding: 10px;
     font-size: 16px;
 }
 
-input:focus{
+input:focus {
     outline: none;
 }
 
-form .read{
+form .read {
     font-size: 18px;
 }
 
-#overlay{
+#overlay {
     position: fixed;
     opacity: 0;
     transition: all 200ms ease-in-out;
@@ -124,7 +148,7 @@ form .read{
     pointer-events: none;
 }
 
-#overlay.active{
+#overlay.active {
     opacity: 1;
     pointer-events: all;
 }
