--- a/style.css
+++ b/style.css
@@ -9,11 +9,13 @@
 
 body {
     background-color: #F0F0F0;
+    position: relative;
+    min-height: 100vh;
 }
 
 header {
     background-color: #FFF;
-    box-shadow: 0px 2px rgba(0, 0, 0, 0.16)
+    box-shadow: 0px 2px rgba(0, 0, 0, 0.16);
 }
 
 .container {
@@ -56,6 +58,7 @@ header {
 main {
     margin-top: 20px;
     text-align: center;
+    padding-bottom: 60px;
 }
 
 main .button {
@@ -66,8 +69,7 @@ main .button {
 .books {
     margin-top: 16px;
     display: grid;
-    grid-template-columns: repeat(3, auto);
-    grid-auto-flow: row;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 20px;
 }
 
@@ -75,17 +77,18 @@ main .button {
     display: flex;
     flex-direction: column;
     gap: 16px;
-    max-width: 360px;
     font-size: 20px;
     background-color: #FFF;
     border-radius: 10px;
     padding: 20px;
+    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16);
 }
 
 .footer {
     position: absolute;
     bottom: 0;
     left: 0;
+    height: 60px;
     width: 100%;
     display: flex;
     justify-content: center;
